--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,11 +13,12 @@
 
   <nav>
 
-    <div class="brand"><a href="/">Skills</a></div>
+    <div class="brand"><a href="/">Survey Gorilla</a></div>
 
     <ul>
       <% if current_user %>
-        <li><a id="add-skill" href="/skills/new">Add Skill</a></li>
+        <li><a id="acct-mgmt" href="/users/session[:user_id]/account">Account Management</a></li>
+        <li><a id="create-survey" href="/surveys/new">Create Survey</a></li>
         <li><a id="sign-out" href="/sessions/<%= current_user.id %>">Sign Out</a></li>
       <% else %>
         <li><a href="/sessions/new">Sign In</a></li>
