--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,17 +1,12 @@
 <div class="container">
   <h1>Sign Up</h1>
 
-  <div id="errors"><%= erb :_model_errors, :layout => false, :locals => { :model => @user } %></div>
+  <div id="errors"><%= erb :_model_errors, :layout => false, :locals => { :model => @user } %></div> <!-- predict this will give us errors because we don't have the partial -->
 
   <form id="sign-up" method="post" action="/users">
     <label class="label" for="name">Name</label>
-    <input type="text" name="user[name]" placeholder="e.g., joe" value="<%= @user.name %>">
+    <input type="text" name="user[username]" placeholder="e.g., joe" value="<%= @user.username %>"> <!-- predict that this page doubles as an edit user account page -->
     <span id="name-errors" class="errors"></span>
-    <br>
-
-    <label class="label" for="email">Email</label>
-    <input type="email" name="user[email]" placeholder="e.g., me@example.com" value="<%= @user.email %>">
-    <span id="email-errors" class="errors"></span>
     <br>
 
     <label class="label" for="password">Password</label>
