Bugfix: Answer form rendering in every div and render mock index view
After the merge, the javascript was adding the answer form to every div.
Fixed it by adding a class to the answers div.

Also created a very simple rendering of the surveys list on the answer
page with dummy data for the surveys.

--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -3,7 +3,7 @@ method='post'>
 <p>Name: <input type='text' name='title'></p>
 <p>Question: <input type='text' name='question'></p>
 
-<div>
+<div class='answers'>
 <p>
 <span id='addVar'>Add Variable</span></p>
 <p><input type='submit' value='Submit'></p>
