Implemented rough index page view.
In it's most basic form, the index page is a list of surveys. We
added a very rough view of an index page.

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,8 @@
 <div>
+  <ul>
   <% @surveys.each do |survey| %>
-   <p> yolo</p>
+    <li> <p> <a href='#'> <%= survey.title %> </a> - <%= survey.created_at %> - <%= survey.participants.count %>  </p> </li>
   <% end %>
+  </ul>
 </div>
 
