Added rough outline of survey view
Added route gets 'survey/id' This gets the survey and displays it.
We listed all of the questions and all of the answers for each question.

Right now this is a static page. We have not added form elements.

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <ul>
   <% @surveys.each do |survey| %>
     <li> <p> <a href='#'> <%= survey.title %> </a> - <%= survey.created_at %> - <%= survey.participants.count %>  </p> </li>
