--- a/app/views/display_survey.erb
+++ b/app/views/display_survey.erb
@@ -5,11 +5,12 @@
       <li> <%= question.text %> </li>
        <ul>
        <% question.answers.each do |answer| %>
-        <input type='radio' name= '<%= answer.id %>'>  <%= answer.text %> <br>
+        <input type='radio' name='<%= question.id %>' value='<%= answer.id %>'>  <%= answer.text %> <br>
        <% end %>
       </ul>
     <% end %>
     </ul>
+    <input type='hidden' name='survey_id' value='<%= @survey.id %>'>
     <input type='submit' value='submit survey'>
   </form>
 </div>
