Finished feature: take a survey
Completed wiring up survey veiw to post route. Post route '/surveys'
now creates a Participant and a bunch of survey Results and sticks
them in the database, representing a completed survey. The route then
redirects to the main surveys page.

--- a/app/views/display_survey.erb
+++ b/app/views/display_survey.erb
@@ -5,7 +5,7 @@
       <li> <%= question.text %> </li>
        <ul>
        <% question.answers.each do |answer| %>
-        <input type='radio' name='<%= question.id %>' value='<%= answer.id %>'>  <%= answer.text %> <br>
+        <input type='radio' name='answers[<%= question.id %>]' value='<%= answer.id %>'>  <%= answer.text %> <br>
        <% end %>
       </ul>
     <% end %>
