Ability to clear form after question is submitted

--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -1,12 +1,12 @@
-<form action='/create'
+<form id='create_survey'
+action='/create'
 method='post'>
-<p>Name: <input type='text' name='title'></p>
+<p id='survey_name'>Name: <input type='text' name='title'></p>
 <p>Question: <input type='text' name='question'></p>
 
-<div>
+<div class='answers'>
 <p>
-<span id='addVar'>Add Variable</span></p>
+<span id='addVar'>Add Answer</span></p>
 <p><input type='submit' value='Submit'></p>
 </div>
-
 </form>
