added minor css styling

--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -1,12 +1,12 @@
 <form id='create_survey'
 action='/create'
 method='post'>
-<p id='survey_name'>Name: <input type='text' name='title'></p>
+<p id='survey_name'>Name: <input id='survey' type='text' name='title'></p>
 <p>Question: <input type='text' name='question'></p>
 
 <div class='answers'>
 <p>
 <span id='addVar'>Add Answer</span></p>
-<p><input type='submit' value='Submit'></p>
+<p><input type='submit' value='Add Another Question'></p>
 </div>
 </form>
