--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,7 +12,6 @@
 <body>
 
   <nav>
-
     <div class="brand"><a href="/">Survey Gorilla</a></div>
 
     <ul>
@@ -27,7 +26,8 @@
     </ul>
 
   </nav>
-
-  <%= yield %>
+  <div class='container'>
+    <%= yield %>
+  </div>
 </body>
 </html>
