--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -1,7 +1,11 @@
-<form id='create_survey'
-action='/create'
-method='post'>
-<p id='survey_name'>Name: <input id='survey' type='text' name='title'></p>
+<form id='create_survey' action='/create' method='post'>
+  <h3>Give Your Survey a Name</h3>
+  <% if session[:survey_id] != nil %>
+    <p id='survey_name'>Name: <input id='survey' type='text' name='title' value='<%= Survey.find(session[:survey_id]).title %>'></p>
+  <% else %>
+      <p id='survey_name'>Name: <input id='survey' type='text' name='title'></p>
+  <% end %>
+
 <p>Question: <input type='text' name='question'></p>
 
 <div class='answers'>
@@ -10,3 +14,5 @@ method='post'>
 <p><input type='submit' value='Add Another Question'></p>
 </div>
 </form>
+
+<a href='/finish'>Finish Survey</a>
