--- a/app/views/display_survey.erb
+++ b/app/views/display_survey.erb
@@ -1,8 +1,9 @@
+<h1><%= @survey.title %></h1>
 <form id="display_survey" action="/surveys" method="post">
   <ul>
   <% @survey.questions.each do |question| %>
     <li> <%= question.text %> </li>
-     <ul>
+     <ul class='options'>
      <% question.answers.each do |answer| %>
       <input type='radio' name='answers[<%= question.id %>]' value='<%= answer.id %>'>  <%= answer.text %> <br>
      <% end %>
