--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel='icon' type='image/png' href='/gorilla.ico'>
 <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
 
