Add funtionality to popup the login page
The signin page is modal for the home page and the take a survey
page.  Now the submit of the sign in needs to be made AJAX.

--- a/app/views/display_survey.erb
+++ b/app/views/display_survey.erb
@@ -11,6 +11,7 @@
   <% end %>
   </ul>
   <input type='hidden' name='survey_id' value='<%= @survey.id %>'>
-  <input type='submit' value='submit survey'>
+  <input type='hidden' id='logon_user_id' value='<%= @user_id %>'>
+  <input type='submit' class="validate_login" value='submit survey'>
 </form>
 
