--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,2 +1,10 @@
 You have reached the account dashboard!
-<div id="survey-list"><%= erb :_survey_listing, :layout => false %></div>
+<div id="survey-list">
+  <h3>Surveys you have created: </h3>
+  <%= erb :_survey_listing, :layout => false %>
+</div>
+
+<h3>Surveys you have participated in: </h3>
+
+<!-- List out all the surveys the user has created
+List out all surveys the user has participated in -->
