--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
+  <script src="/js/stats.js"></script>
+  <script src="/js/highcharts.js"></script>
+
   <title></title>
 </head>
 <body>
