Added gorilla pic, fixed pie chart size, and ability to update pie chart

--- a/app/views/survey_stats.erb
+++ b/app/views/survey_stats.erb
@@ -1,4 +1,6 @@
-<div class='pie_chart' style='min-width:310px; height:400px; margin: 0 auto'></div>
+<div class='gorilla'><img id='gorilla_img' src='/gorilla_pic.jpg'></div>
+
+<div class='pie_chart' style='display: none; min-width:310px; height:400px; margin: 0 auto'></div>
 <% @survey.questions.each do |question| %>
 <form class='question_text' action='/question'
 method='post'>
@@ -7,7 +9,7 @@ method='post'>
     <% end %>
   <input type='submit' value='<%= question.text %>'>
 </form>
-  <!-- <p>Results for '<span class='question_text'><%= question.text %></span>'</p> -->
+
 <% end %>
 
 <!-- Need to take data from each survey and represent into a graph meaningfully
