--- a/public/css/application.css
+++ b/public/css/application.css
@@ -14,6 +14,7 @@
 .options {
   margin:5px 0px 15px 30px;
 }
+
 nav {
   width: 100%;
   position:fixed;
@@ -46,3 +47,6 @@ dt {
   margin: 10px;
 }
 
+#gorilla_img {
+  width: 100%;
+}
