changed some of the create survey layout

--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -10,9 +10,9 @@
 
 <div class='answers'>
 <p>
-<span id='addVar'>Add Answer</span></p>
-<p><input type='submit' value='Add Another Question'></p>
+<button id='addVar'>Add Answer</button></p>
+<p><input type='submit' value='Add Question to Survey'></p>
 </div>
 </form>
-
-<a href='/finish'>Finish Survey</a>
+<strong>Warning</strong> Clicking 'Finish Survey' without adding question first will not save the question!
+<button onclick="location.href='/finish'">Finish Survey</button>
