--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -3,13 +3,11 @@
 <div id="errors"><%= erb :_model_errors, :layout => false, :locals => { :model => @user } %></div> <!-- predict this will give us errors because we don't have the partial -->
 
 <form id="sign-up" method="post" action="/users">
-  <label class="label" for="name">Name</label>
-  <input type="text" name="user[username]" placeholder="e.g., joe" value="<%= @user.username %>"> <!-- predict that this page doubles as an edit user account page -->
+  <input type="text" name="user[username]" placeholder="Username" value="<%= @user.username %>"> <!-- predict that this page doubles as an edit user account page -->
   <span id="name-errors" class="errors"></span>
   <br>
 
-  <label class="label" for="password">Password</label>
-  <input type="password" name="user[password]" placeholder="6 or more characters">
+  <input type="password" name="user[password]" placeholder="Password">
   <span id="entered_password-errors" class="errors"></span>
   <br>
 
