--- a/public/css/application.css
+++ b/public/css/application.css
@@ -40,6 +40,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 ul {
   list-style-type: none;
   padding: 0px;
