fixed add answer bug on create survey page

--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -10,7 +10,7 @@
 
 <div class='answers'>
 <p>
-<button id='addVar'>Add Answer</button></p>
+<a href='#' id='addVar'>Add Answer</button></a>
 <p><input type='submit' value='Add Question to Survey'></p>
 </div>
 </form>
